// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.28.0

package jwt

import (
	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
)

type Group struct {
	ID          uuid.UUID
	Title       string
	Description pgtype.Text
	IsArchived  pgtype.Bool
	GidNumber   pgtype.Int4
	CreatedAt   pgtype.Timestamptz
	UpdatedAt   pgtype.Timestamptz
}

type GroupRole struct {
	ID          uuid.UUID
	RoleName    string
	AccessLevel string
}

type Membership struct {
	UserID    uuid.UUID
	GroupID   uuid.UUID
	RoleID    uuid.UUID
	CreatedAt pgtype.Timestamptz
	UpdatedAt pgtype.Timestamptz
}

type PendingMembership struct {
	ID             uuid.UUID
	UserIdentifier string
	GroupID        uuid.UUID
	RoleID         uuid.UUID
	CreatedAt      pgtype.Timestamptz
	UpdatedAt      pgtype.Timestamptz
}

type PublicKey struct {
	ID        uuid.UUID
	UserID    uuid.UUID
	Title     string
	PublicKey string
}

type RefreshToken struct {
	ID             uuid.UUID
	UserID         uuid.UUID
	IsActive       pgtype.Bool
	ExpirationDate pgtype.Timestamptz
}

type Setting struct {
	UserID        uuid.UUID
	FullName      pgtype.Text
	LinuxUsername pgtype.Text
}

type User struct {
	ID        uuid.UUID
	Email     string
	Role      string
	StudentID pgtype.Text
	UidNumber pgtype.Int4
	CreatedAt pgtype.Timestamptz
	UpdatedAt pgtype.Timestamptz
}
